apps/convertx/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: convertx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: convertx
  template:
    metadata:
      labels:
        app: convertx
      annotations:
        io.containerd.runc.v2.group: "zeropod"
        zeropod.ctrox.dev/container-names: "convertx"
        zeropod.ctrox.dev/ports-map: "convertx=3000"
        zeropod.ctrox.dev/scaledown-duration: 10s
    spec:
      runtimeClassName: zeropod
      containers:
        - name: convertx
          image: ghcr.io/c4illin/convertx:main
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: data-volume
              mountPath: /app/data
              subPath: convertx
      volumes:
        - name: data-volume
          persistentVolumeClaim:
            claimName: data-pvc
