apps/convertx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: convertx-ingress
  annotations:
    traefik.ingress.k8s.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: cloudflare-issuer
spec:
  rules:
    - host: convertx.veirt.web.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: convertx-service
                port:
                  number: 3000
  tls:
    - hosts:
        - convertx.veirt.web.id
      secretName: convertx-tls
